Added JVM memory tuning params