@@ -1,8 +1,9 @@
 #!/bin/bash
 
 CLASSPATH=robonobo.jar
+MEMOPTS="-client -Xmx96m -Xms16m -XX:MaxPermSize=32m -Xss64k -XX:NewRatio=2"
 #DEBUG_LISTEN="-Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=9190"
-JVMARGS=$DEBUG_LISTEN
+JVMARGS=$MEMOPTS $DEBUG_LISTEN
 
 export CLASSPATH
 
